# book-a-table

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wait-for-postgres.sh
bookings/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
bookings/migrations/: 0003_booking_special_requests_alter_booking_date_and_more.py  0004_remove_booking_special_requests.py
bookings/templates/bookings/: about.html  base.html  book_table.html  booking_list.html  booking_success.html  cancel_booking.html  cancel_confirm.html  cancel_lookup.html  dinner_menu.html  home.html  lunch_menu.html  review_ticker.html  submit_review.html  timeslots.html  update_booking.html  update_booking_lookup.html  weekly_calendar.html
bookings/templates/includes/: footer.html  head.html  messages.html  navbar.html  scripts.html
restaurant_booking/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: container_styles.css  custom.css
