[project]


name = "book-a-table"
version = "0.1.0"
description = ""
authors = [
    { name = "G", email = "0020992@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.18)",
    "asgiref (==3.8.1)",
    "djangorestframework (==3.15.2)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.12.2)",
    "django-extensions (>=4.1,<5.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "setuptools (>=80.4.0,<81.0.0)",
    "python-decouple (>=3.8,<4.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "restaurant_booking" },
    { include = "bookings" }
]
